# vibevoice_asr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  SPEC.md  docker-compose.yml  make.bat  make.ps1
LICENSES/: audio-denoiser.LICENSE.md  audio-slicer.LICENSE.md
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  constants.py  db.py  errors.py  main.py  models.py  schemas.py  worker.py
backend/app/middleware/: api_key_auth.py  integration_log.py  metrics.py
backend/app/routes/admin/: api_keys.py  datasets.py  integration_calls.py  jobs.py  models.py  projects.py  system.py  training.py  webhook.py
backend/app/routes/v1/: jobs.py  transcribe_sync.py  transcribe_ws.py
backend/app/services/: audio_preprocessor.py  audio_splitter.py  auth.py  dataset_exporter.py  dataset_importer.py  dataset_service.py  denoiser.py  deployment.py  docker_ctrl.py  file_store.py  job_runner.py  queue.py  training_runner.py  vllm_client.py  webhook.py  youtube_fetcher.py  youtube_job_runner.py
backend/app/utils/: audio.py  format_converters.py  hmac_signer.py  parser.py  silence_slicer.py  subtitle_parser.py  time_utils.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_youtube_import_job_fields.py  0003_job_is_corrected.py  0004_project_denoise_settings.py  0005_drop_denoise_model.py  0006_project_playback_speed.py
backend/scripts/: build_template_xlsx.py
backend/templates/: .gitkeep  dataset_template.json  dataset_template.srt  dataset_template.txt  dataset_template.xlsx
backend/tests/: conftest.py  test_admin_hotwords_io.py  test_admin_jobs_patch.py  test_admin_jobs_segments.py  test_app_client_smoke.py  test_audio.py  test_audio_preprocessor.py  test_audio_splitter.py  test_auth.py  test_chunk_retry.py  test_config.py  test_constants.py  test_dataset_exporter.py  test_dataset_importer.py  test_dataset_importer_srt.py  test_dataset_importer_txt.py  test_dataset_importer_xlsx.py  test_dataset_service.py  test_denoiser.py  test_errors.py  test_file_store.py  test_format_converters.py  test_job_runner_denoise.py  test_job_runner_speed.py  test_models_youtube.py  test_parser.py  test_routes_datasets.py  test_routes_projects.py  test_routes_youtube_import.py  test_silence_slicer.py  test_subtitle_parser.py  test_time_utils.py  test_vllm_client.py  test_webhook_signer.py  test_youtube_fetcher.py  test_youtube_job_runner.py
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf  nginx.conf.template  train.Dockerfile
docs/superpowers/backlog/: 2026-05-10-asr-quality-risks.md
docs/superpowers/plans/: 2026-05-09-m3-frontend-admin.md  2026-05-10-m3.5-datasets.md  2026-05-10-m5-full.md  2026-05-12-audio-denoiser.md  2026-05-12-denoise-noisereduce.md  2026-05-12-job-correction-flag.md  2026-05-12-silence-slicer.md  2026-05-12-youtube-import.md  2026-05-13-audio-playback-speed.md
docs/superpowers/specs/: 2026-05-09-m3-frontend-admin-design.md  2026-05-10-m3.5-datasets-design.md  2026-05-10-m5-full-design.md  2026-05-12-audio-denoiser-design.md  2026-05-12-denoise-noisereduce-design.md  2026-05-12-job-correction-flag-design.md  2026-05-12-silence-slicer-design.md  2026-05-12-youtube-import-design.md  2026-05-13-audio-playback-speed-design.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: api_keys.ts  client.ts  datasets.ts  jobs.ts  models.ts  projects.ts  system.ts  training.ts  types.ts
frontend/src/components/: DatasetImportModal.tsx  FromJobModal.tsx  HotwordsChips.tsx  HotwordsImportModal.tsx  JobList.tsx  JobStatusBadge.tsx  ProjectFormModal.tsx  SegmentFocusEditor.tsx  SegmentListItem.tsx  Sidebar.tsx  Toast.tsx  TranscriptEditor.tsx  TranscriptViewer.tsx  UploadDropzone.tsx  WaveformPlayer.tsx
frontend/src/hooks/: useAutoSave.ts  useKeyboardShortcuts.ts  (+2 more)
scripts/: bootstrap.ps1  bootstrap.sh  download_denoiser_models.sh  qc_simulator.py  seed_demo_project.py  verify_deployment.ps1  verify_deployment.sh
(+24 files in other folders)
