[tool.poetry]
name = "vibevoice-asr-backend"
version = "0.1.0"
description = "VibeVoice ASR internal platform — backend"
authors = ["Internal"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.9"
websockets = "^12.0"

# Data layer
sqlalchemy = "^2.0.25"
alembic = "^1.13.0"
aiosqlite = "^0.19.0"
asyncpg = {version = "^0.29.0", optional = true}  # 預留 Postgres

# Queue / Cache
arq = "^0.25.0"
redis = "^5.0.1"

# HTTP / external
httpx = "^0.26.0"
aiohttp = "^3.9.0"
aiofiles = "^23.2.1"

# Validation
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
email-validator = "^2.1.0"

# Audio / file format support
ffmpeg-python = "^0.2.0"
librosa = "^0.10.2"
soundfile = "^0.12.1"
openpyxl = "^3.1.2"
pandas = "^2.2.0"
pysrt = "^1.1.2"
webvtt-py = "^0.5.1"
mutagen = "^1.47"

# Docker control
docker = "^7.0.0"

# Logging / observability
structlog = "^24.1.0"
prometheus-client = "^0.19.0"

# Misc
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[tool.poetry.extras]
postgres = ["asyncpg"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# === Tooling configs ===

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "ASYNC"]
# E501 由 formatter 處理；B008 對 FastAPI Depends() / File() default 是 false positive
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
